@@ -2,13 +2,21 @@ package org.hupo.psi.mi.psicquic.indexing.batch.writer;
 
 import org.apache.solr.client.solrj.SolrQuery;
 import org.hupo.psi.calimocho.model.Row;
-import org.hupo.psi.mi.psicquic.indexing.batch.AbstractSolrServerTest;
+import org.hupo.psi.mi.psicquic.indexing.batch.converter.SolrInteractionConverter;
+import org.hupo.psi.mi.psicquic.indexing.batch.model.SolrInteraction;
 import org.hupo.psi.mi.psicquic.indexing.batch.reader.MitabCalimochoLineMapper;
 import org.junit.Assert;
+import org.junit.Before;
 import org.junit.Test;
+import org.junit.runner.RunWith;
 import org.springframework.batch.item.ExecutionContext;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.solr.core.SolrOperations;
+import org.springframework.data.solr.core.query.SimpleQuery;
+import org.springframework.test.context.ContextConfiguration;
+import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 
-import java.util.Arrays;
+import java.util.List;
 
 /**
  * Unit tester for SolrItemWriter
@@ -17,14 +25,29 @@ import java.util.Arrays;
  * @version $Id$
  * @since <pre>16/07/12</pre>
  */
+@RunWith(SpringJUnit4ClassRunner.class)
+@ContextConfiguration( locations = {
+        "classpath*:/META-INF/psicquic-spring.xml",
+        "classpath*:/jobs/psicquic-indexing-spring-test.xml"
+})
+public class SolrItemWriterUnitTest {
 
-public class SolrItemWriterUnitTest extends AbstractSolrServerTest {
+    @Autowired
+    private SolrOperations solrTemplate;
+    @Autowired
+    private SolrInteractionConverter solrInteractionConverter;
+
+    @Before
+    public void clearRepo() {
+        solrTemplate.delete(SolrInteraction.INTERACTIONS_CORE_NAME, new SimpleQuery("*:*"));
+    }
 
     @Test
     public void test_write_mitab27_row() throws Exception {
-        String solrURL= "http://127.0.0.1:18080/solr";
-        SolrItemWriter writer = new SolrItemWriter();
-        writer.setSolrUrl(solrURL);
+        SolrItemWriter<SolrInteraction> writer = new SolrItemWriter<>();
+        writer.setSolrTemplate(solrTemplate);
+        writer.setSolrCollection(SolrInteraction.INTERACTIONS_CORE_NAME);
+        writer.setSolrConverter(solrInteractionConverter);
 
         // add some data to the solrServer using writer
         MitabCalimochoLineMapper mitabLineMapper = new MitabCalimochoLineMapper();
@@ -35,18 +58,19 @@ public class SolrItemWriterUnitTest extends AbstractSolrServerTest {
         // index data to be hosted by PSICQUIC : we should have one result
         ExecutionContext context = new ExecutionContext();
         writer.open(context);
-        writer.write(Arrays.asList(row));
+        writer.write(List.of(row));
         writer.update(context);
         writer.close();
 
-        Assert.assertEquals(1L, solrJettyRunner.getSolrServer().query(new SolrQuery("*:*")).getResults().getNumFound());
+        Assert.assertEquals(1L, solrTemplate.getSolrClient().query(SolrInteraction.INTERACTIONS_CORE_NAME, new SolrQuery("*:*")).getResults().getNumFound());
     }
 
     @Test
     public void test_write_diff_mitab_version_rows() throws Exception {
-        String solrURL= "http://127.0.0.1:18080/solr";
-        SolrItemWriter writer = new SolrItemWriter();
-        writer.setSolrUrl(solrURL);
+        SolrItemWriter<SolrInteraction> writer = new SolrItemWriter<>();
+        writer.setSolrTemplate(solrTemplate);
+        writer.setSolrCollection(SolrInteraction.INTERACTIONS_CORE_NAME);
+        writer.setSolrConverter(solrInteractionConverter);
 
         // add some data to the solrServer using writer
         MitabCalimochoLineMapper mitabLineMapper = new MitabCalimochoLineMapper();
@@ -59,11 +83,11 @@ public class SolrItemWriterUnitTest extends AbstractSolrServerTest {
         // index data to be hosted by PSICQUIC : we should have 2 results
         ExecutionContext context = new ExecutionContext();
         writer.open(context);
-        writer.write(Arrays.asList(firstRow));
-        writer.write(Arrays.asList(secondRow));
+        writer.write(List.of(firstRow));
+        writer.write(List.of(secondRow));
         writer.update(context);
         writer.close();
 
-        Assert.assertEquals(2L, solrJettyRunner.getSolrServer().query(new SolrQuery("*:*")).getResults().getNumFound());
+        Assert.assertEquals(2L, solrTemplate.getSolrClient().query(SolrInteraction.INTERACTIONS_CORE_NAME, new SolrQuery("*:*")).getResults().getNumFound());
     }
 }
